# investor-matching-rishi

./: .gitignore  Dockerfile  app.json  docker-compose.yml  package-lock.json  package.json
.github/workflows/: auto-tag.yml  ci.yml
app/: _layout.tsx  index.tsx
app/(onboarding)/founder/: 1-basic-info.tsx  2-founding-year.tsx  3-business-snapshot.tsx  4-additional.tsx  4-optional.tsx  _layout.tsx  index.tsx
app/(onboarding)/investor/: 1-strategy.tsx  2-focus-areas.tsx  3-preferences.tsx  _layout.tsx
app/(tabs)/: _layout.tsx
app/(tabs)/discover/: _layout.tsx  index.tsx
app/(tabs)/profile/: _layout.tsx
backend/: Dockerfile  Dockerfile.postgres  docker-compose.yml  pyproject.toml  requirements-ci.txt
backend/chat/: Dockerfile.chat  auth.py  main.py  pyproject.toml
backend/chat/core/: broker_client.py  manager.py  router.py
backend/config/: logger_config.py
backend/prisma/: prisma_client.py  schema.prisma
backend/prisma_db/: prisma_client.py  schema.prisma
backend/src/: main.py
backend/src/endpoints/: ingestion.py  main_router.py
backend/src/preprocess/: pdf_service.py  worker_tasks.py
backend/src/schemas/: ingestion.py
backend/src_api/: main.py
backend/src_api/core/: limiter.py  redis_client.py  security.py
backend/src_api/dependencies/: auth.py
backend/src_api/endpoints/: auth.py  inference.py  ingestion.py  main_router.py  onboarding.py
backend/src_api/preprocess/: pdf_service.py
backend/src_api/schemas/: auth.py  ingestion.py  onboarding.py
backend/src_ml/: Dockerfile.ml  api_gateway.py  pyproject.toml
backend/src_ml/inference/: sparse_search.py
backend/src_ml/services/: routes.py  sql_filters.py  vectoriser.py
backend/tests/: test_auth.py
backend/workers/: .gitignore  Dockerfile.worker  app.py  pyproject.toml  tasks.py
components/discover/: StoryContent.tsx
components/onboarding/: ProgressBar.tsx  SelectionGroup.tsx  TimelineSelector.tsx
components/ui/: Chip.tsx
docs/: api_schemas.md  changelogs.md  chat_api_contract.md  ci.md  founder-onboarding.md  investor-onboarding.md  known_stubs.md  onboarding_question_log.md  pitch_deck_ingestion.md  rishi-tips.md  todo.md  updated-onboarding-02-14.md  v2.md
docs/ml_docs/: v1.md
frontend/: GoogleService-Info.plist  app.json  google-services.json  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx
frontend/app/(auth)/: _layout.tsx  login.tsx  signup.tsx  welcome.tsx
frontend/app/(onboarding)/: _layout.tsx  index.tsx
frontend/app/(onboarding)/founder/: 1-basic-info.tsx  2-founding-year.tsx  2-stage.tsx  3-fundraising.tsx  4-additional.tsx  4-pitch-deck.tsx  5-pitch-deck.tsx  _layout.tsx
frontend/app/(onboarding)/investor/: 1-profile.tsx  1-strategy.tsx  2-focus-areas.tsx  2-thesis.tsx  3-cheque.tsx  _layout.tsx  index.tsx
frontend/app/(tabs)/: _layout.tsx
frontend/app/(tabs)/discover/: _layout.tsx
frontend/app/(tabs)/profile/: index.tsx
frontend/components/discover/: ActionButtons.tsx  StoryContent.tsx  SwipeCard.tsx
frontend/components/onboarding/: RoleCard.tsx
frontend/components/ui/: Button.tsx  TextField.tsx
frontend/constants/: Colors.ts  api.ts  enums.ts
frontend/docs/: theme-instructions.md
frontend/docs/rishi-tips/: 2026-01-28.md  rishi-tips.md
frontend/utils/: navigation.ts  validation.ts
frontend/utils/api/: auth.ts  client.ts  ingestion.ts  onboarding.ts
frontend/utils/contexts/: ColorProvider.tsx
frontend/utils/firebase/: storage.ts
frontend/utils/storage/: auth.ts  types.ts
utils/storage/: mmkvStorage.ts  onboarding.ts  types.ts
