[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "redis>=7.4.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.50",
    "taskiq>=0.12.4",
    "taskiq-redis>=1.2.2",
]
