[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "prisma>=0.15.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=7.4.1",
    "sqlalchemy>=2.0.50",
    "taskiq>=0.12.4",
    "taskiq-redis>=1.2.2",
    "uvicorn>=0.49.0",
]
