[project]
name = "fundmatch_chat_service"
version = "0.0.1"
description = "The chat service of fundmatch, based on FastAPI's WebSocket class"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.110.0",        # Core web framework + WebSockets
    "uvicorn>=0.30.0",                   # ASGI server to run FastAPI
    "prisma>=0.13.1",                    # Database ORM (for onboarding checks & history)
    "redis>=5.0.0",                      # Redis client for the write-behind buffer
    "PyJWT>=2.8.0",                      # Stateless JWT decoding for WebSockets
    "python-jose[cryptography]>=3.3.0",  # Required by your src_api auth dependency                    # Data validation (FastAPI relies on this)
    "pydantic>=2.7.0",
    "taskiq>=0.11.0",
    "taskiq-redis>=0.5.0",
    "passlib[bcrypt]>=1.7.4",
]
